--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google-cloud/storage": "^7.16.0",
     "@prisma/client": "^6.11.1",
+    "@runwayml/sdk": "^2.4.2",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
