--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google-cloud/storage": "^7.16.0",
     "@prisma/client": "^6.11.1",
     "@runwayml/sdk": "^2.4.2",
+    "@types/sharp": "^0.31.1",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
@@ -30,6 +31,7 @@
     "node-fetch": "^3.3.2",
     "openai": "^5.9.0",
     "replicate": "^1.0.1",
+    "sharp": "^0.34.3",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "zod": "^3.25.76"
