--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "multer": "^2.0.1",
     "node-fetch": "^3.3.2",
     "openai": "^5.9.0",
+    "p-limit": "^6.2.0",
     "replicate": "^1.0.1",
     "sharp": "^0.34.3",
     "uuid": "^11.1.0",
