--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "storyteller-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.ts",
+  "main": "./index.ts",
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node --loader ts-node/esm ./index.ts",
+    "start": "node --loader ts-node/esm ./src/index.ts",
     "dev": "ts-node --esm src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
