--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fal-ai/client": "^1.6.0",
     "@google-cloud/storage": "^7.16.0",
     "@prisma/client": "^6.11.1",
     "@runwayml/sdk": "^2.4.2",
